major refactor, more comments, and minor bug fixes