@@ -5,11 +5,10 @@
  * This code base is proprietary and confidential.
  * Written by Ali Ghanbari (ali.ghanbari@utdallas.edu).
  */
-
 package edu.utdallas.objsim.maven;
 
 import edu.utdallas.objsim.ObjSimEntryPoint;
-import edu.utdallas.objsim.commons.MemberNameUtils;
+import edu.utdallas.objsim.commons.misc.MemberNameUtils;
 import org.apache.maven.artifact.Artifact;
 import org.apache.maven.artifact.DependencyResolutionRequiredException;
 import org.apache.maven.plugin.AbstractMojo;
@@ -26,12 +25,15 @@ import org.pitest.functional.Option;
 
 import java.io.File;
 import java.util.ArrayList;
+import java.util.Arrays;
 import java.util.LinkedList;
 import java.util.List;
 import java.util.Map;
 import java.util.Set;
 
 /**
+ * The base class for our awesome Maven plugin Mojo!
+ *
  * @author Ali Ghanbari (ali.ghanbari@utdallas.edu)
  */
 public abstract class AbstractObjSimMojo extends AbstractMojo {
@@ -49,11 +51,38 @@ public abstract class AbstractObjSimMojo extends AbstractMojo {
     // ---- plugin params ----
     // -----------------------
 
+    /**
+     * The name of the file (in relative or absolute form) of the CSV file
+     * containing required information about patches.
+     * By default, the file <code>input-file.csv</code>, in the project
+     * base directory, shall be used.
+     */
     @Parameter(property = "inputCSVFile", defaultValue = "input-file.csv")
     protected File inputCSVFile;
 
-    @Parameter(property = "failingTests")
+    /**
+     * A list of originally failing test cases. You want to tell ObjSim which test
+     * cases, among those that cover a patch location were originally failing.
+     * The test cases should be fully qualified, and in either of the following
+     * forms:
+     * <code>c.t</code>
+     * <code>c:t</code>
+     * <code>c::t</code>
+     * where c is the fully qualified Java name of the test cass and t is the name
+     * of the test method (without parameter lists).
+     */
+    @Parameter(property = "failingTests", required = true)
     protected Set<String> failingTests;
+
+    /**
+     * A list of JVM arguments used when creating a child JVM process, i.e. during
+     * profiling.
+     *
+     * If left unspecified, ObjSim will use the following arguments:
+     * "-Xmx32g" and "-XX:MaxPermSize=16g"
+     */
+    @Parameter(property = "childJVMArgs")
+    protected List<String> childJVMArgs;
 
     @Override
     public void execute() throws MojoExecutionException, MojoFailureException {
@@ -70,6 +99,7 @@ public abstract class AbstractObjSimMojo extends AbstractMojo {
                     .withClassByteArraySource(byteArraySource)
                     .withClassPath(classPath)
                     .withCompatibleJREHome(this.compatibleJREHome)
+                    .withChildJVMArgs(this.childJVMArgs)
                     .withInputCSVFile(this.inputCSVFile)
                     .withFailingTests(this.failingTests)
                     .run();
@@ -87,15 +117,21 @@ public abstract class AbstractObjSimMojo extends AbstractMojo {
         if (!this.compatibleJREHome.isDirectory()) {
             throw new MojoFailureException("Invalid JAVA_HOME/JRE_HOME");
         }
+
         if (!this.inputCSVFile.isFile()) {
             throw new MojoFailureException("Missing and/or invalid input CSV file");
         }
+
         final List<String> temp = new LinkedList<>();
         for (final String failingTest : this.failingTests) {
             temp.add(MemberNameUtils.sanitizeTestName(failingTest));
         }
         this.failingTests.clear();
         this.failingTests.addAll(temp);
+
+        if (this.childJVMArgs == null || this.childJVMArgs.isEmpty()) {
+            this.childJVMArgs = Arrays.asList("-Xmx32g", "-XX:MaxPermSize=16g");
+        }
     }
 
     private ClassPath createClassPath() {
@@ -139,7 +175,7 @@ public abstract class AbstractObjSimMojo extends AbstractMojo {
         return new CachingByteArraySource(cbas, CACHE_SIZE);
     }
 
-    // this method is adopted from PIT's source code
+    // credit: this method is adopted from PIT's source code
     private ClassByteArraySource fallbackToClassLoader(final ClassByteArraySource bas) {
         final ClassByteArraySource clSource = ClassloaderByteArraySource.fromContext();
         return new ClassByteArraySource() {
